PostScript Output: Bugfix for the occasional badly rendered glyph on HP Laserjets. Reason: the /sfnts entry should split strings at glyph boundaries which currently doesn't happen. Solution: Switch to the /GlyphDirectory approach described in the section "Incremental Definition of Type 42 Fonts" in the PS language reference. This way all glyphs are separated into single strings which seems to solve the problem. It is also much closer to the approach taken by the various PostScript printer drivers on Windows.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/Temp_TrueTypeInPostScript@1034094 13f79535-47bb-0310-9956-ffa450edef68